Fix: spacing and copyrights centered

--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@
 .up{
   position: absolute;
   right:0;
-  bottom:40%;
+  bottom:33%;
 }
